Run jlink for images without a JRE (Temurin 16)